--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "test1",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "react-course",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "1.1.5"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ILopatenko/test1.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ILopatenko/test1/issues"
-  },
-  "homepage": "https://github.com/ILopatenko/test1#readme"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
